# O-bhains

./: Analysis_data.py  Data_access.ipynb  LICENCE  README.md  analysis.ipynb  data_access.ipynb  environment.yml  file2.csv  setup.cfg  setup.py
cow_disease_detection/: clean_dataset.py  configuration.py  credentials.json
cow_disease_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cow_disease_detection/cow_disease_detection/: clean_dataset.py  disease_detection.py
cow_disease_detection/data/: clean_data.csv  from_fetch_data.csv  raw_data.csv  summarized_data.csv
cow_disease_detection/fetch_data/: clean_dataset.py  pull_and_clean_data.py
cow_disease_detection/scripts/: disease_detection.py
data/: file2.csv  from_fetch_data.csv
fetch_data/: clean_dataset.py
scripts/: disease_detection.py
tests/: pytest.ini
tests/fetch_data/: test_fetch_data.py
