[metadata]
name = cow_disease_detection
version = 0.0.1
author = Hussnain Ali
author_email = hassnainali89383@gmail.com
description = For cow disease detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hussnain060/O-bhains
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True